# experiments

./: README.md
bahari/: .gitignore  README.md  hello.py  prompt.xml  pyproject.toml  pyvenv.cfg
bahari/pricing/: bahari_app.py  models.py  parse_pdf.py  pricelist.html
