[project]
name = "bahari"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.3.0",
    "jinja2>=3.1.6",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "weasyprint>=65.1",
]
